syntax = "proto3";

package author;

service authorService {
  rpc create (createAuthorRequest) returns (fullDataAuthorReply) {}
  rpc update (updateAuthorRequest) returns (onlyIdReply) {}
  rpc delete (onlyIdRequest) returns (onlyIdReply) {}
  rpc getAll (nothing) returns (getAllAuthorsReply) {}
  rpc getById (onlyIdRequest) returns (fullDataAuthorReply) {}
}

message createAuthorRequest {
  string authorName = 1;
}
message updateAuthorRequest {
  string id = 1;
  string authorName = 2;
}
message onlyIdRequest {
  string id = 1;
}
message nothing {}

message onlyIdReply {
  bool success = 1;
  string id = 2;
}
message getAllAuthorsReply {
  bool success = 1;
  int32 count = 2;
  repeated fullDataAuthorReply items = 3;
}
message fullDataAuthorReply {
  bool success = 1;
  string id = 2;
  string authorName = 3;
}